<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="questionAnswer"
            type="com.techneapps.triviaapp.database.models.QuestionAnswer" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="26sp"
        tools:context=".view.user.EnterUserNameActivity">

        <LinearLayout
            android:id="@+id/questionNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/question_1"
                android:textColor="@color/md_grey_700"
                android:textSize="28sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/_2"
                android:textColor="@color/md_grey_700"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"

            android:contentDescription="@string/divider"
            android:layout_width="match_parent"
            tools:ignore="SmallSp"
            android:layout_height="2sp"
            android:layout_below="@+id/questionNo"
            android:id="@+id/dottedLine"
            android:src="@drawable/dotted_line"/>

        <TextView
            android:layout_below="@+id/dottedLine"
            android:id="@+id/quizFirstQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@{questionAnswer.question}"
            android:textColor="@color/md_white_1000"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quizFirstQuestionTextView"
            android:layout_marginTop="20sp">

            <RadioButton
                android:id="@+id/radioOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10sp"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/custom_radiobutton"
                android:drawablePadding="20dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="@drawable/custom_ripple"
                android:layoutDirection="rtl"
                android:padding="16sp"
                android:text="@{questionAnswer.optionA}"
                android:textAlignment="textStart"
                android:textColor="@color/md_grey_300"
                android:textColorHint="@color/md_grey_300"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10sp"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/custom_radiobutton"
                android:drawablePadding="20dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="@drawable/custom_ripple"
                android:layoutDirection="rtl"
                android:padding="16sp"
                android:text="@{questionAnswer.optionB}"
                android:textAlignment="textStart"
                android:textColor="@color/md_grey_300"
                android:textColorHint="@color/md_grey_300"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10sp"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/custom_radiobutton"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="@drawable/custom_ripple"
                android:layoutDirection="rtl"
                android:padding="16sp"
                android:text="@{questionAnswer.optionC}"
                android:textAlignment="textStart"
                android:textColor="@color/md_grey_300"
                android:textColorHint="@color/md_grey_300"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10sp"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/custom_radiobutton"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="@drawable/custom_ripple"
                android:layoutDirection="rtl"
                android:padding="16sp"
                android:text="@{questionAnswer.optionD}"
                android:textAlignment="textStart"
                android:textColor="@color/md_grey_300"
                android:textColorHint="@color/md_grey_300"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_rect_background_state"
            android:enabled="false"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:onClick="goToNextPage"
            android:text="@string/next"
            android:textAllCaps="false" />

    </RelativeLayout>
</layout>